@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.123 2001/07/18 13:12:33 stelian Exp $
+$Id: CHANGES,v 1.124 2001/07/18 14:57:46 stelian Exp $
 
 Changes between versions 0.4b22 and 0.4b23 (released ????????????)
 ==================================================================
@@ -38,6 +38,10 @@ Changes between versions 0.4b22 and 0.4b23 (released ????????????)
 9.	Small fix for the QFA routines provided by Uwe Gohlke 
 	<uwe@ugsoft.de>, and some recommendations for QFA uses in
 	the man pages.
+
+10.	Fixed the multivolume restoring where making a mistake
+	to the 'Mount next tape' prompt caused several blocks to
+	be lost.
 
 Changes between versions 0.4b21 and 0.4b22 (released May 12, 2001)
 ==================================================================
